# OpenGL-Mini-Engine

./: CMakeLists.txt
src/: CMakeLists.txt
src/EngineDLL/: CMakeLists.txt  OGL_API.h  ttest.cpp
src/EngineDLL/API/OpenGL/: OGLGraphicsPipeline.cpp  OGLGraphicsPipeline.h  OGLIndexBuffer.hpp  OGLPixelShader.hpp  OGLShaderManager.hpp  OGLTexture2D.cpp  OGLTexture2D.h  OGLVertexBuffer.hpp  OGLVertexShader.hpp
src/EngineDLL/Common/: Common.h
src/EngineDLL/Core/: Application.hpp  ApplicationManager.hpp
src/EngineDLL/Display/: Window.hpp
src/EngineDLL/Shaders/: pixel_shader_basic.glsl  vertex_shader_basic.glsl
src/EngineDLL/Shaders/Triangle/: pixel_shader_basic.glsl
src/EngineDLL/Shaders/TriangleTextured/: pixel_shader_basic.glsl  vertex_shader_basic.glsl
src/engine/: CMakeLists.txt
src/engine/Common/: Common.h
src/glad/: CMakeLists.txt
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/sandbox/: CMakeLists.txt  Lab1_0.hpp  TraingleColorAnim.hpp  TriangleTextued.hpp  test.cpp
