INCLUDE_DIRECTORIES(${GLFW_LIB_INCLUDE})
INCLUDE_DIRECTORIES(${GLM_SOURCE_DIR})
INCLUDE_DIRECTORIES(${GLAD_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${ENGINE_SRC_DIR})

LINK_DIRECTORIES(${ENGINE_BUILD_LIBS_DIR})

file(GLOB_RECURSE SourceFiles
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
)

add_compile_definitions("OGLME_BUILD_ENGINE")

add_library(${ENGINE_LIBRARY_NAME} SHARED ${SourceFiles})

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SourceFiles})
